<resources>
    <string name="app_name">新家购</string>
    <string name="login">登 录</string>
    <string name="register">注 册</string>

    <string name="input_phone">输入手机号码</string>
    <string name="input_pwd">输入密码</string>
    <string name="input_confirm_pwd">确认密码</string>
    <string name="input_code">验证码</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="immediately_register">立即注册</string>
    <string name="third_login">第三方登录</string>
    <string name="login_by_wechat">微信登录</string>
    <string name="get_code">获取验证码</string>
    <string name="classify">分类</string>
    <string name="shopping_cart">购物车</string>
    <string name="mine">我的</string>
    <string name="rightful_phone">请输入国内合法手机号码</string>
    <string name="data_parse_error">数据解析异常</string>
    <string name="pwd_unidentical">两次密码输入不一致</string>
    <string name="re_get_code">%1d秒后重新获取</string>
    <string name="get_code_successed">验证码发送成功</string>
    <string name="reload">重新加载</string>
    <string name="distance_km">%1$.1fkm</string>
    <string name="data_error">数据异常</string>
    <string name="sales">今日销量%1d</string>
    <string name="last_month_sales">上月销量%1d</string>
    <string name="extension">我要\n推广</string>
    <string name="x_month">%1d月</string>
    <string name="t_sales">销量(笔)\n%d</string>
    <string name="orders">订单(个)\n%d</string>
    <string name="amounts">营业额(元)\n%.2f</string>
    <string name="amounts_wan">营业额(万)\n%.2f</string>
    <string name="y_amounts_wan">年营业额(万)\n%.2f</string>
    <string name="y_amounts">年营业额(元) %.2f</string>
    <string name="more">更多</string>
    <string name="store_name">店铺名称</string>
    <string name="store_address">店铺地址</string>
    <string name="business_hours">营业时间</string>
    <string name="store">商家</string>
    <string name="discount">优惠活动</string>
    <string name="detail">详情</string>
    <string name="price">¥%.2f元</string>
    <string name="add_shopping_cart">加入购物车</string>


</resources>
