<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/margin_large"
    android:paddingLeft="@dimen/margin_normal"
    android:paddingRight="@dimen/margin_normal"
    tools:context="com.hnxjgou.xinjia.view.user.LoginFragment">

    <EditText
        android:id="@+id/et_phone"
        style="@style/common_input_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:imeOptions="actionNext"
        android:hint="@string/input_phone"
        android:text="13560343975"
        android:drawableLeft="@drawable/icon_phone"
        />

    <EditText
        android:id="@+id/et_pwd"
        style="@style/common_input_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_phone"
        android:layout_alignLeft="@id/et_phone"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:layout_marginTop="@dimen/margin_normal"
        android:hint="@string/input_pwd"
        android:text="123456"
        android:drawableLeft="@drawable/icon_pwd"
        />


    <Button
        android:id="@+id/btn_login"
        style="@style/common_button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_pwd"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:text="@string/login"
        android:enabled="false"/>

    <TextView
        android:id="@+id/tv_forget_pwd"
        style="@style/common_lable_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_pwd"
        android:layout_below="@id/btn_login"
        android:layout_alignLeft="@id/btn_login"
        android:layout_marginTop="@dimen/margin_small"/>

    <TextView
        android:id="@+id/tv_register"
        style="@style/common_lable_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/immediately_register"
        android:layout_below="@id/btn_login"
        android:layout_alignRight="@id/btn_login"
        android:layout_alignTop="@id/tv_forget_pwd"/>

    <LinearLayout
        android:id="@+id/ly_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_forget_pwd"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/margin_large">
        <View style="@style/common_line_style"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            />

        <TextView
            style="@style/common_lable_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/third_login"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            />

        <View style="@style/common_line_style"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="1dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ly_divider"
        android:gravity="center">
        <com.hnxjgou.xinjia.widget.ImageTextView
            android:id="@+id/itv_wechat"
            android:layout_width="@dimen/xlarge_width"
            android:layout_height="@dimen/xlarge_height"
            app:textSize="@dimen/smaller_txt_size"
            app:textColor="@color/color_999999"
            app:text="@string/login_by_wechat"
            app:space="@dimen/margin_smallest"
            android:background="@drawable/icon_weixin"/>
    </LinearLayout>

</RelativeLayout>
